--- a/app/src/main/res/layout/changepass.xml
+++ b/app/src/main/res/layout/changepass.xml
@@ -11,8 +11,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text=" Thay đổi mật khẩu:"
+            android:text=" Thay đổi mật khẩu"
             android:id="@+id/textView"
+            android:textColor="@color/mauxanh"
             android:textSize="30dp"/>
 
         <EditText
@@ -36,5 +37,29 @@
         android:hint="Xác nhận mật khẩu mới"
             android:inputType="textPassword"
         android:padding="10dp" />
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center">
+        <Button
+            android:id="@+id/dialoghuy"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="Hủy"
+            android:textAllCaps="false"
+            android:background="@color/mauxanh"
+            android:textColor="@color/actionbar_text"/>
+        <Button
+            android:textColor="@color/actionbar_text"
+            android:id="@+id/diaglogok"
+            android:layout_marginLeft="15dp"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:text="OK"
+            android:background="@color/mauxam"
+            android:enabled="false"
+          />
+    </LinearLayout>
     </LinearLayout>
 
