--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -436,20 +436,20 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
-        <Button
-            android:id="@+id/editProfile"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Chỉnh sửa"
-            android:layout_gravity="right"
-            android:gravity="center"
-            android:textSize="20dp"
-            android:textStyle="bold"
-            android:visibility="gone"
-            android:editable="true"
-            android:background="@color/mauxanh"
-            android:textColor="@color/actionbar_text"
-            />
+        <!--<Button-->
+            <!--android:id="@+id/editProfile"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="Chỉnh sửa"-->
+            <!--android:layout_gravity="right"-->
+            <!--android:gravity="center"-->
+            <!--android:textSize="20dp"-->
+            <!--android:textStyle="bold"-->
+            <!--android:visibility="gone"-->
+            <!--android:editable="true"-->
+            <!--android:background="@color/mauxanh"-->
+            <!--android:textColor="@color/actionbar_text"-->
+            <!--/>-->
             <Button
                 android:id="@+id/OKProfile"
                 android:layout_width="115dp"
