--- a/app/src/main/res/layout/changepass.xml
+++ b/app/src/main/res/layout/changepass.xml
@@ -14,7 +14,8 @@
             android:text=" Thay đổi mật khẩu"
             android:id="@+id/textView"
             android:textColor="@color/mauxanh"
-            android:textSize="30dp"/>
+            android:textSize="30dp"
+            android:theme="@style/MyEditTextTheme"/>
 
         <EditText
             android:id="@+id/passcu"
@@ -22,21 +23,24 @@
             android:layout_height="wrap_content"
             android:hint="Nhập mật khẩu hiện tại"
             android:inputType="textPassword"
-            android:padding="10dp" />
+            android:padding="10dp"
+            android:theme="@style/MyEditTextTheme"/>
         <EditText
         android:id="@+id/passmoi"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="Nhập mật khẩu mới"
             android:inputType="textPassword"
-        android:padding="10dp" />
+        android:padding="10dp"
+            android:theme="@style/MyEditTextTheme"/>
         <EditText
         android:id="@+id/cfpassmoi"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:hint="Xác nhận mật khẩu mới"
             android:inputType="textPassword"
-        android:padding="10dp" />
+        android:padding="10dp"
+            android:theme="@style/MyEditTextTheme"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
