--- a/app/src/main/res/layout/activity_profile1.xml
+++ b/app/src/main/res/layout/activity_profile1.xml
@@ -112,6 +112,7 @@
             android:layout_gravity="left"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
+            android:paddingTop="10dp"
             >
             <TextView
                 android:layout_marginTop="10dp"
@@ -134,6 +135,7 @@
 
         </LinearLayout>
         <LinearLayout
+            android:paddingTop="10dp"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -151,6 +153,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
+
                     android:id="@+id/password"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -166,6 +169,7 @@
             </RelativeLayout>
         </LinearLayout>
         <LinearLayout
+            android:paddingTop="10dp"
             android:layout_marginTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -198,6 +202,7 @@
             </LinearLayout>
         </LinearLayout>
         <LinearLayout
+            android:paddingTop="10dp"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -370,7 +375,7 @@
                     android:text="Chỉnh sửa"
                     android:layout_gravity="right"
                     android:gravity="center"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     android:visibility="visible"
                     android:editable="true"
                     android:background="@color/mauxanh"
