--- a/app/src/main/res/layout/changepass.xml
+++ b/app/src/main/res/layout/changepass.xml
@@ -14,14 +14,15 @@
             android:text=" Thay đổi mật khẩu"
             android:id="@+id/textView"
             android:textColor="@color/mauxanh"
-            android:textSize="30dp"
+            android:textSize="20dp"
             android:theme="@style/MyEditTextTheme"/>
 
         <EditText
             android:id="@+id/passcu"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:hint="Nhập mật khẩu hiện tại"
+            android:hint="@string/hint_passcu"
+            android:textSize="12dp"
             android:inputType="textPassword"
             android:padding="10dp"
             android:theme="@style/MyEditTextTheme"/>
@@ -29,7 +30,8 @@
         android:id="@+id/passmoi"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Nhập mật khẩu mới"
+        android:hint="@string/hint_passmoi"
+            android:textSize="12dp"
             android:inputType="textPassword"
         android:padding="10dp"
             android:theme="@style/MyEditTextTheme"/>
@@ -37,7 +39,8 @@
         android:id="@+id/cfpassmoi"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:hint="Xác nhận mật khẩu mới"
+        android:hint="@string/hint_cfpassmoi"
+            android:textSize="12dp"
             android:inputType="textPassword"
         android:padding="10dp"
             android:theme="@style/MyEditTextTheme"/>
