--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -74,7 +74,7 @@
                         android:enabled="false"
                         android:maxLength="24"
                         android:theme="@style/MyEditTextTheme"
-                        android:inputType="textPersonName|textMultiLine"
+                        android:inputType="textNoSuggestions|textMultiLine"
 
 
 
@@ -230,7 +230,7 @@
                     android:layout_height="wrap_content"
                     android:ems = "40"
                     android:singleLine="false"
-                    android:inputType="number"
+                    android:inputType="textNoSuggestions|number"
                     android:enabled="false"
                     android:maxLength="25"
                     android:theme="@style/MyEditTextTheme"
@@ -281,7 +281,7 @@
                     android:layout_height="wrap_content"
                     android:ems="40"
                     android:singleLine="false"
-                    android:inputType="textMultiLine"
+                    android:inputType="textNoSuggestions|textMultiLine"
                     android:enabled="false"
                     android:layout_marginLeft="30dp"
                     android:maxLength="30"
