--- a/app/src/main/res/layout/activity_frm_dang_ky.xml
+++ b/app/src/main/res/layout/activity_frm_dang_ky.xml
@@ -232,7 +232,7 @@
             android:ems = "40"
             android:singleLine="false"
             android:maxLines="1"
-            android:inputType="textNoSuggestions|number"
+            android:inputType="number"
             android:hint="Nhập số điện thoại (*)"
             android:theme="@style/MyEditTextTheme"
             android:maxLength="25"
