--- a/app/src/main/res/layout/activity_frm_dang_ky.xml
+++ b/app/src/main/res/layout/activity_frm_dang_ky.xml
@@ -66,7 +66,7 @@
             android:ems="30"
             android:singleLine="false"
             android:maxLines="1"
-            android:inputType="textNoSuggestions|text"
+            android:inputType="textNoSuggestions|textMultiLine"
             android:hint="Nhập họ và tên (*)"
             android:imeOptions="flagNoFullscreen"
             android:shadowColor="@color/mauxam"
@@ -276,7 +276,7 @@
             android:ems="40"
             android:singleLine="false"
             android:maxLines="2"
-            android:inputType="textNoSuggestions|text"
+            android:inputType="textNoSuggestions|textMultiLine"
             android:hint="Nhập địa chỉ (*)"
             android:theme="@style/MyEditTextTheme"
             android:maxLength="30"/>
